# OSMExplorer

./: .gitignore  .gitmodules  CMakeLists.txt  InstallScript.cmake  License.txt  OSMExplorer.pro  README.md  aprsdotficonfigurationdialog.cpp  aprsdotficonfigurationdialog.h  aprsfiexplorerplugin.cpp  aprsfiexplorerplugin.h  defaults.h  directionlistitemwidget.ui  explorerplugininterface.h  gpssourcedialog.h  locationdataprovider.cpp  locationdataprovider.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapmarkermodel.cpp  markerdialog.cpp  markerdialog.h  markerlistitemwidget.cpp  markerlistitemwidget.h  nmeaseriallocationdataprovider.cpp  nmeaseriallocationdataprovider.h  resources.qrc  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  slippymapwidget.cpp  slippymapwidget.h  slippymapwidgetlayer.cpp  slippymapwidgetlayer.h  slippymapwidgetmarker.cpp  slippymapwidgetmarker.h  stuff.crap
APRS/: APRS.pro  aprsparser.h
LocationServices/: CMakeLists.txt  LocationServices.pro  locationdataprovider.h  locationservices_global.h
OSMExplorer.app/Contents/: Info.plist
SlippyMap/: CMakeLists.txt  SlippyMap.pro  slippymap_global.h  slippymaplayer.cpp  slippymaplayer.h  slippymaplayermanager.cpp  slippymaplayermanager.h  slippymaplayermarker.cpp  slippymaplayermarker.h  slippymaplayermarkerpropertypage.cpp  slippymaplayermarkerpropertypage.h  slippymaplayerobject.cpp  slippymaplayerobject.h  slippymaplayerobjectpropertypage.cpp  slippymaplayerobjectpropertypage.h  slippymaplayerobjectprovider.cpp  slippymaplayerobjectprovider.h  slippymaplayerpolygon.cpp  slippymaplayerpolygon.h  slippymaplayerpolygonpropertypage.cpp  slippymaplayerpolygonpropertypage.h  slippymappolygonpropertypage.cpp  slippymappolygonpropertypage.h  slippymaprenderer.cpp  slippymaprenderer.h  slippymapshapepropertypage.cpp  slippymapshapepropertypage.h  slippymapwidget.cpp  slippymapwidget.h  slippymapwidgetellipse.cpp  slippymapwidgetellipse.h  slippymapwidgetlayer.h  slippymapwidgetmarker.cpp  slippymapwidgetmarker.h  slippymapwidgetmarkergroup.cpp  slippymapwidgetmarkergroup.h  slippymapwidgetmarkermodel.cpp  slippymapwidgetmarkermodel.h  slippymapwidgetmarkerprovider.cpp  slippymapwidgetmarkerprovider.h  (+4 more)
explorer/: SlippyMapLayerTrack.cpp  SlippyMapLayerTrack.h  SlippyMapWeatherMarker.cpp  SlippyMapWeatherMarker.h  config.h  directionlistitemwidget.cpp  directionlistitemwidget.h  explorer.pro  explorerplugininterface.cpp  explorerplugininterface.h  gpssourcedialog.cpp  gpssourcedialog.ui  gpxcopyright.cpp  gpxcopyright.h  gpxmetadata.cpp  gpxmetadata.h  gpxparser.cpp  gpxparser.h  gpxperson.cpp  gpxperson.h  gpxtrack.cpp  gpxtrack.h  gpxtracklink.cpp  gpxtracklink.h  gpxtracksegment.cpp  gpxtracksegment.h  gpxwaypoint.cpp  gpxwaypoint.h  layerpropertiesdialog.cpp  layerpropertiesdialog.h  layerpropertiesdialog.ui  locationdataprovider.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapdataimportdialog.cpp  mapdataimportdialog.h  mapdataimportdialog.ui  mapmarkermodel.h  (+37 more)
explorer/Application/: DatabaseManager.cpp  DatabaseManager.h  ExplorerApplication.cpp  ExplorerApplication.h  HistoryManager.cpp  HistoryManager.h  PluginManager.cpp  PluginManager.h
explorer/Database/: DatabaseObjectPropertyPage.cpp  DatabaseObjectPropertyPage.h
explorer/Dialog/: ObjectBrowserDialog.cpp  ObjectBrowserDialog.h  databaseconnectiondialog.cpp  databaseconnectiondialog.h  databaseconnectiondialog.ui
explorer/GeoCoding/: GeoCodingInterface.cpp  GeoCodingInterface.h  GeoCodingListModel.cpp  GeoCodingListModel.h  GeoCodingResultListItem.cpp  GeoCodingResultListItem.h  RadarGeoCodingInterface.cpp  RadarGeoCodingInterface.h
explorer/Map/: SlippyMapGpsMarker.cpp  SlippyMapGpsMarker.h  SlippyMapGpsMarkerPropertyPage.cpp  SlippyMapGpsMarkerPropertyPage.h  SlippyMapLayerObjectAttachmentsPropertyPage.cpp  SlippyMapLayerObjectAttachmentsPropertyPage.h  SlippyMapLayerObjectFilesPropertyPage.cpp  SlippyMapLayerObjectFilesPropertyPage.h  SlippyMapLayerProxyModel.cpp  SlippyMapLayerProxyModel.h  SlippyMapLayerTrack.cpp  SlippyMapLayerTrack.h  SlippyMapLayerTrackPropertyPage.cpp  SlippyMapLayerTrackPropertyPage.h  SlippyMapLayerTrackStylePropertyPage.cpp  SlippyMapLayerTrackStylePropertyPage.h  SlippyMapTreeView.cpp  SlippyMapTreeView.h
explorer/Network/: ServerConnectionDialog.cpp  ServerConnectionDialog.h  ServerInterface.cpp  ServerInterface.h  WorkspaceSelectionDialog.cpp  WorkspaceSelectionDialog.h  WorkspaceSelectionDialog.ui
explorer/PropertyPage/: SlippyMapLayerMarkerPropertyPage.cpp  SlippyMapLayerMarkerPropertyPage.h  SlippyMapLayerObjectPropertyPage.cpp  SlippyMapLayerObjectPropertyPage.h  SlippyMapLayerPolygonPropertyPage.cpp  SlippyMapLayerPolygonPropertyPage.h  SlippyMapLayerTrackPropertyPage.cpp  SlippyMapLayerTrackPropertyPage.h
explorer/Weather/: ForecastPeriodWidget.cpp  ForecastPeriodWidget.h  NationalWeatherServiceInterface.cpp  NationalWeatherServiceInterface.h  SlippyMapWeatherStationMarker.cpp  SlippyMapWeatherStationMarker.h  WeatherForecastWindow.cpp  WeatherForecastWindow.h  WeatherStationMarker.cpp  WeatherStationMarker.h  WeatherStationPropertyPage.cpp  WeatherStationPropertyPage.h
explorer/Widget/: OEDockWidget.cpp  OEDockWidget.h
explorer/Window/: SlippyMapTab.cpp  SlippyMapTab.h  TabbedMainWindow.cpp  TabbedMainWindow.h
explorer/gpx/: gpxcopyright.cpp  gpxmetadata.cpp  gpxperson.cpp  gpxperson.h  gpxtracklink.h  gpxtracksegment.cpp  gpxwaypoint.cpp  gpxwaypoint.h
explorer/resources/: schema.sql
plugins/: CMakeLists.txt
plugins/APRS/: APRS.pro  CMakeLists.txt  aprs_global.h  aprsexplorerplugin.cpp  aprsexplorerplugin.h  aprsmessage.cpp  aprsmessage.h  aprsparser.cpp  aprsparser.h
plugins/RainViewer/: CMakeLists.txt  RainViewerMarkerPropertyPage.cpp  RainViewerMarkerPropertyPage.h  RainViewerTileLayer.cpp  RainViewerTileLayer.h  rainviewer_global.h  rainviewerplugin.cpp  rainviewerplugin.h
plugins/aprsfi/: aprsdotficonfigurationdialog.ui  aprsfi.pro  aprsfiexplorerplugin.cpp  aprsfiexplorerplugin.h  aprsfilocationdataprovider.cpp  aprsfilocationdataprovider.h  (+8 more)
(+10 files in other folders)
